@@ -1,5 +1,16 @@
 2010-01-17  Adam Barth  <abarth@webkit.org>
 
+        Reviewed by Eric Seidel.
+
+        EWS (Early Warning Systems) should build both debug and release
+        https://bugs.webkit.org/show_bug.cgi?id=33681
+
+        Build both debug and release for chromium-ews.
+
+        * Scripts/webkitpy/commands/early_warning_system.py:
+
+2010-01-17  Adam Barth  <abarth@webkit.org>
+
         Reviewed by Darin Adler.
 
         style-queue should include instructions for how to file bugs against check-webkit-style
